team card section has been created

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Staging - Interior Design Studio</title>
 
+    <!-- Font Awesome for social media icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
     <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Aldrich&display=swap"
@@ -125,6 +130,167 @@
         </div>
 
         <!-- Add more slides as needed -->
+      </div>
+    </section>
+    <!-- What We Do Section -->
+    <section class="what-we-do">
+      <div class="container">
+        <p class="subtitle">OUR SPECIALIZATION</p>
+        <h2 class="title">WHAT WE DO</h2>
+
+        <div class="services">
+          <div class="service">
+            <div class="icon-bg">
+              <img
+                src="./images/services-1.png.webp"
+                alt="Interior Design Icon"
+              />
+            </div>
+            <h4>INTERIOR DESIGN</h4>
+            <p>
+              As you might expect of a company that began as a high-end
+              interiors contractor, we pay strict attention.
+            </p>
+          </div>
+
+          <div class="service">
+            <div class="icon-bg">
+              <img
+                src="./images/services-2.png.webp"
+                alt="Office Design Icon"
+              />
+            </div>
+            <h4>OFFICE DESIGN</h4>
+            <p>
+              Our commitment to exceptional quality has never wavered. Today it
+              ranks as one of the most highly-regarded construction.
+            </p>
+          </div>
+
+          <div class="service">
+            <div class="icon-bg">
+              <img src="./images/services-3.png.webp" alt="Home Design Icon" />
+            </div>
+            <h4>HOME DESIGN</h4>
+            <p>
+              Interdisciplinary architectural studio with cultural, residential
+              and commercial projects built worldwide.
+            </p>
+          </div>
+
+          <div class="service">
+            <div class="icon-bg">
+              <img
+                src="./images/services-4.png.webp"
+                alt="Design Drawing Icon"
+              />
+            </div>
+            <h4>DESIGN DRAWING</h4>
+            <p>
+              Creating architectural and creative solutions to help people
+              realize their vision and make them a reality.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- clients number portion -->
+    <!-- Stats Section -->
+    <section class="stats-section">
+      <div class="stats-container">
+        <div class="stat-box">
+          <h2 class="stat-number">85</h2>
+          <p><span>Projects</span><br />Completed</p>
+        </div>
+        <div class="stat-box">
+          <h2 class="stat-number">127</h2>
+          <p><span>Happy</span><br />Clients</p>
+        </div>
+        <div class="stat-box">
+          <h2 class="stat-number">36</h2>
+          <p><span>Awards</span><br />Received</p>
+        </div>
+        <div class="stat-box">
+          <h2 class="stat-number">74</h2>
+          <p><span>Cups of</span><br />Coffee</p>
+        </div>
+      </div>
+    </section>
+    <!-- Team section -->
+    <section class="team">
+      <div class="team-container">
+        <p class="subtitle">OUR TEAM</p>
+        <h2 class="title">MEET OUR TEAM</h2>
+        <!-- main container for card -->
+        <div class="team-cards-grid">
+          <!-- card 1 -->
+          <div class="team-card">
+            <img src="./images/team-1.jpg.webp" alt="1" />
+            <div class="team-caption">
+              <h5>Dolores Webster</h5>
+              <small>CEO & FOUNDER</small>
+            </div>
+            <!-- Appears on hover -->
+            <div class="team-overlay">
+              <h5>Dolores Webster</h5>
+              <small>CEO & Founder</small>
+              <p>
+                Vestibulum dapibus odio quam, sit amet hendrerit dui ultricies
+                consectetur. Ut viverra porta leo.
+              </p>
+              <div class="social-icons">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-instagram"></i>
+              </div>
+            </div>
+          </div>
+          <!-- card 2 -->
+          <div class="team-card">
+            <img src="./images/team-2.jpg.webp" alt="1" />
+            <div class="team-caption">
+              <h5>Dolores Webster</h5>
+              <small>CEO & FOUNDER</small>
+            </div>
+            <!-- Appears on hover -->
+            <div class="team-overlay">
+              <h5>Dolores Webster</h5>
+              <small>CEO & Founder</small>
+              <p>
+                Vestibulum dapibus odio quam, sit amet hendrerit dui ultricies
+                consectetur. Ut viverra porta leo.
+              </p>
+              <div class="social-icons">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-instagram"></i>
+              </div>
+            </div>
+          </div>
+          <!-- card 3 -->
+          <div class="team-card">
+            <img src="./images/team-3.jpg.webp" alt="1" />
+            <div class="team-caption">
+              <h5>Dolores Webster</h5>
+              <small>CEO & FOUNDER</small>
+            </div>
+            <!-- Appears on hover -->
+            <div class="team-overlay">
+              <h5>Dolores Webster</h5>
+              <small>CEO & Founder</small>
+              <p>
+                Vestibulum dapibus odio quam, sit amet hendrerit dui ultricies
+                consectetur. Ut viverra porta leo.
+              </p>
+              <div class="social-icons">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-instagram"></i>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
