--- a/index.html
+++ b/index.html
@@ -27,14 +27,40 @@
     <!-- Navigation will be inserted by JavaScript -->
     <div id="navigation"></div>
 
-    <!-- Hero section  -->
+    <!-- Mobile Menu Toggle (add this) -->
+    <div class="mobile-menu-toggle" id="mobileMenuToggle">
+      <div class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </div>
+
+    <!-- Mobile Menu Overlay (add this) -->
+    <div class="mobile-menu-overlay" id="mobileMenuOverlay">
+      <div class="mobile-menu-content">
+        <ul class="mobile-nav-menu">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <div class="mobile-contact-info">
+          <span>Call us for any questions</span>
+          <div class="phone">+01 123 456 789</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Hero section -->
     <section class="hero">
       <div class="hero-content">
         <h1>
           QUALITY IS NOT ONLY <br />
           OUR STANDARD.
         </h1>
-        <button class="btn-primary">Learn More</button>
+        <button href="#" class="btn-primary">See Projects</button>
       </div>
     </section>
 
@@ -294,6 +320,138 @@
       </div>
     </section>
 
+    <!-- why choose us -->
+    <section class="choose-us">
+      <div class="choose-content">
+        <h6>WHY CHOOSE US?</h6>
+        <h4>
+          OUR ABILITY TO DELIVER OUTSTANDING <br />RESULTS FOR OUR CLIENTS
+          STARTS WITH <br />OUR TEAM OF SMART.
+        </h4>
+
+        <button class="choose-btn">Contact Us</button>
+      </div>
+    </section>
+
+    <!-- blog section -->
+    <section class="blog">
+      <p class="subtitle">LATEST NEWS</p>
+      <h2 class="title">FROM OUR BLOGS</h2>
+      <div class="blog-container">
+        <!-- blog-1 -->
+        <div class="blog-card">
+          <div class="blog-image blog-1"></div>
+          <h5>ARCHITECTURE</h5>
+          <h3>
+            Target and Amazon <br />Shopping List for Home <br />
+            Stagers
+          </h3>
+          <a href="#">Read more</a>
+        </div>
+        <!-- blog-2 -->
+        <div class="blog-card">
+          <div class="blog-image blog-2"></div>
+          <h5>INTERIOR</h5>
+          <h3>
+            6 Ideas for Team Building <br />and Employee <br />Appreciation for
+            <br />Home Stagers
+          </h3>
+          <a href="#">Read more</a>
+        </div>
+        <!-- blog-3 -->
+        <div class="blog-card">
+          <div class="blog-image blog-3"></div>
+          <h5>PLANNING</h5>
+          <h3>
+            How to Find the Best Price <br />Structure for Your Home
+            <br />
+            Staging Services
+          </h3>
+          <a href="#">Read more</a>
+        </div>
+      </div>
+    </section>
+    <!-- footer section -->
+    <footer class="footer">
+      <div class="footer-container">
+        <!-- Top Section -->
+        <div class="footer-top">
+          <h2 class="footer-title">READY TO WORK WITH US?</h2>
+          <div class="email-signup">
+            <input
+              type="email"
+              class="email-input"
+              placeholder="Enter your email..."
+            />
+            <button class="email-btn">
+              <i class="fas fa-paper-plane"></i>
+            </button>
+          </div>
+        </div>
+
+        <!-- Footer Content -->
+        <div class="footer-content">
+          <!-- Company Info -->
+          <div class="footer-section company-info">
+            <div class="logo">Staging</div>
+            <p>7176 Blue Spring Lane<br />Santa Monica, CA 90403</p>
+            <p>info.colorlib@gmail.com<br />+84 123 456 789</p>
+            <div class="social-links">
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            </div>
+          </div>
+
+          <!-- Company Links -->
+          <div class="footer-section">
+            <h3>Company</h3>
+            <ul class="footer-links">
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Services</a></li>
+              <li><a href="#">Our Works</a></li>
+              <li><a href="#">Career</a></li>
+              <li><a href="#">FAQs</a></li>
+            </ul>
+          </div>
+
+          <!-- Services Links -->
+          <div class="footer-section">
+            <h3>Services</h3>
+            <ul class="footer-links">
+              <li><a href="#">Architecture</a></li>
+              <li><a href="#">Interior Design</a></li>
+              <li><a href="#">Exterior Design</a></li>
+              <li><a href="#">Planning</a></li>
+            </ul>
+          </div>
+
+          <!-- Contact Info -->
+          <div class="footer-section">
+            <h3>Get In Touch</h3>
+            <p style="color: #999; font-size: 14px; line-height: 1.6">
+              7176 Blue Spring Lane<br />
+              Santa Monica, CA 90403<br /><br />
+              info.colorlib@gmail.com<br />
+              +84 123 456 789
+            </p>
+          </div>
+        </div>
+
+        <!-- Footer Bottom -->
+        <div class="footer-bottom">
+          <div class="footer-bottom-left">
+            Copyright © 2025 All rights reserved | This template is made with ❤️
+            by <a href="#">Colorlib</a>
+          </div>
+          <div class="footer-bottom-right">
+            <a href="#">Terms of use</a>
+            <a href="#">Privacy Policy</a>
+          </div>
+        </div>
+      </div>
+    </footer>
     <!-- Flickity JS -->
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
     <script src="js/main.js"></script>
