--- a/projects.html
+++ b/projects.html
@@ -3,15 +3,236 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Font Awesome for social media icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Aldrich&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Flickity CSS -->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/flickity@2/dist/flickity.min.css"
+    />
     <title>About - My Website</title>
+    <link rel="stylesheet" href="/css/projects.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <!-- Navigation will be inserted by JavaScript -->
     <div id="navigation"></div>
 
-    <h1>project</h1>
-    <p>This is the project page</p>
+    <!-- Mobile Menu Toggle (add this) -->
+    <div class="mobile-menu-toggle" id="mobileMenuToggle">
+      <div class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </div>
 
+    <!-- Mobile Menu Overlay (add this) -->
+    <div class="mobile-menu-overlay" id="mobileMenuOverlay">
+      <div class="mobile-menu-content">
+        <ul class="mobile-nav-menu">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <div class="mobile-contact-info">
+          <span>Call us for any questions</span>
+          <div class="phone">+01 123 456 789</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Hero Section -->
+    <section class="project-hero">
+      <h1>Our Projects</h1>
+      <div class="breadcrumb">
+        <a href="index.html">Home</a>
+        <span>-</span>
+        <span>Projects</span>
+      </div>
+    </section>
+
+    <!-- Projects Grid Section -->
+    <section class="projects-section">
+      <div class="projects-grid">
+        <!-- Project Card 1 -->
+        <div class="project-card">
+          <div
+            class="project-image"
+            style="
+              background-image: url('https://images.unsplash.com/photo-1497366216548-37526070297c?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400');
+            "
+          ></div>
+          <div class="project-info">
+            <h3 class="project-title">Office Building</h3>
+          </div>
+        </div>
+
+        <!-- Project Card 2 -->
+        <div class="project-card">
+          <div
+            class="project-image"
+            style="
+              background-image: url('https://images.unsplash.com/photo-1586023492125-27b2c045efd7?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400');
+            "
+          ></div>
+          <div class="project-info">
+            <h3 class="project-title">Funiture Decorative</h3>
+          </div>
+        </div>
+
+        <!-- Project Card 3 -->
+        <div class="project-card">
+          <div
+            class="project-image"
+            style="
+              background-image: url('https://images.unsplash.com/photo-1616486338812-3dadae4b4ace?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400');
+            "
+          ></div>
+          <div class="project-info">
+            <h3 class="project-title">Interior Design</h3>
+          </div>
+        </div>
+
+        <!-- Project Card 4 -->
+        <div class="project-card">
+          <div
+            class="project-image"
+            style="
+              background-image: url('https://images.unsplash.com/photo-1560518883-ce09059eeffa?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400');
+            "
+          ></div>
+          <div class="project-info">
+            <h3 class="project-title">Home Building</h3>
+          </div>
+        </div>
+
+        <!-- Project Card 5 -->
+        <div class="project-card">
+          <div
+            class="project-image"
+            style="
+              background-image: url('https://images.unsplash.com/photo-1555041469-a586c61ea9bc?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400');
+            "
+          ></div>
+          <div class="project-info">
+            <h3 class="project-title">Decoration</h3>
+          </div>
+        </div>
+
+        <!-- Project Card 6 -->
+        <div class="project-card">
+          <div
+            class="project-image"
+            style="
+              background-image: url('https://images.unsplash.com/photo-1586023492125-27b2c045efd7?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400');
+            "
+          ></div>
+          <div class="project-info">
+            <h3 class="project-title">Funiture</h3>
+          </div>
+        </div>
+      </div>
+
+      <div class="load-more-container">
+        <button class="load-more-btn">Load More</button>
+      </div>
+    </section>
+    <!-- footer section -->
+    <footer class="footer">
+      <div class="footer-container">
+        <!-- Top Section -->
+        <div class="footer-top">
+          <h2 class="footer-title">READY TO WORK WITH US?</h2>
+          <div class="email-signup">
+            <input
+              type="email"
+              class="email-input"
+              placeholder="Enter your email..."
+            />
+            <button class="email-btn">
+              <i class="fas fa-paper-plane"></i>
+            </button>
+          </div>
+        </div>
+
+        <!-- Footer Content -->
+        <div class="footer-content">
+          <!-- Company Info -->
+          <div class="footer-section company-info">
+            <div class="logo">Staging</div>
+            <p>7176 Blue Spring Lane<br />Santa Monica, CA 90403</p>
+            <p>info.colorlib@gmail.com<br />+84 123 456 789</p>
+            <div class="social-links">
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            </div>
+          </div>
+
+          <!-- Company Links -->
+          <div class="footer-section">
+            <h3>Company</h3>
+            <ul class="footer-links">
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Services</a></li>
+              <li><a href="#">Our Works</a></li>
+              <li><a href="#">Career</a></li>
+              <li><a href="#">FAQs</a></li>
+            </ul>
+          </div>
+
+          <!-- Services Links -->
+          <div class="footer-section">
+            <h3>Services</h3>
+            <ul class="footer-links">
+              <li><a href="#">Architecture</a></li>
+              <li><a href="#">Interior Design</a></li>
+              <li><a href="#">Exterior Design</a></li>
+              <li><a href="#">Planning</a></li>
+            </ul>
+          </div>
+
+          <!-- Contact Info -->
+          <div class="footer-section">
+            <h3>Get In Touch</h3>
+            <p style="color: #999; font-size: 14px; line-height: 1.6">
+              7176 Blue Spring Lane<br />
+              Santa Monica, CA 90403<br /><br />
+              info.colorlib@gmail.com<br />
+              +84 123 456 789
+            </p>
+          </div>
+        </div>
+
+        <!-- Footer Bottom -->
+        <div class="footer-bottom">
+          <div class="footer-bottom-left">
+            Copyright © 2025 All rights reserved | This template is made with ❤️
+            by <a href="#">Colorlib</a>
+          </div>
+          <div class="footer-bottom-right">
+            <a href="#">Terms of use</a>
+            <a href="#">Privacy Policy</a>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- Flickity JS -->
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
