--- a/projects.html
+++ b/projects.html
@@ -20,11 +20,12 @@
       rel="stylesheet"
       href="https://unpkg.com/flickity@2/dist/flickity.min.css"
     />
-    <title>About - My Website</title>
+    <title>My Projects</title>
     <link rel="stylesheet" href="/css/projects.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <!-- it is taken from main page  -->
     <!-- Navigation will be inserted by JavaScript -->
     <div id="navigation"></div>
 
@@ -44,7 +45,6 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="projects.html">Projects</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="services.html">Services</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <div class="mobile-contact-info">
@@ -71,9 +71,7 @@
         <div class="project-card">
           <div
             class="project-image"
-            style="
-              background-image: url('https://images.unsplash.com/photo-1497366216548-37526070297c?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400');
-            "
+            style="background-image: url('/images/project-p1.jpg.webp')"
           ></div>
           <div class="project-info">
             <h3 class="project-title">Office Building</h3>
@@ -84,9 +82,7 @@
         <div class="project-card">
           <div
             class="project-image"
-            style="
-              background-image: url('https://images.unsplash.com/photo-1586023492125-27b2c045efd7?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400');
-            "
+            style="background-image: url('/images/project-p2.jpg.webp')"
           ></div>
           <div class="project-info">
             <h3 class="project-title">Funiture Decorative</h3>
@@ -97,9 +93,7 @@
         <div class="project-card">
           <div
             class="project-image"
-            style="
-              background-image: url('https://images.unsplash.com/photo-1616486338812-3dadae4b4ace?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400');
-            "
+            style="background-image: url('/images/project-p3.jpg.webp')"
           ></div>
           <div class="project-info">
             <h3 class="project-title">Interior Design</h3>
@@ -110,9 +104,7 @@
         <div class="project-card">
           <div
             class="project-image"
-            style="
-              background-image: url('https://images.unsplash.com/photo-1560518883-ce09059eeffa?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400');
-            "
+            style="background-image: url('/images/project-p4.jpg.webp')"
           ></div>
           <div class="project-info">
             <h3 class="project-title">Home Building</h3>
@@ -123,9 +115,7 @@
         <div class="project-card">
           <div
             class="project-image"
-            style="
-              background-image: url('https://images.unsplash.com/photo-1555041469-a586c61ea9bc?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400');
-            "
+            style="background-image: url('/images/project-p5.jpg.webp')"
           ></div>
           <div class="project-info">
             <h3 class="project-title">Decoration</h3>
@@ -136,9 +126,7 @@
         <div class="project-card">
           <div
             class="project-image"
-            style="
-              background-image: url('https://images.unsplash.com/photo-1586023492125-27b2c045efd7?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400');
-            "
+            style="background-image: url('/images/project-p6.jpg.webp')"
           ></div>
           <div class="project-info">
             <h3 class="project-title">Funiture</h3>
