project has been completed successfully

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           QUALITY IS NOT ONLY <br />
           OUR STANDARD.
         </h1>
-        <button href="#" class="btn-primary">See Projects</button>
+        <button href="./projects.html" class="btn-primary">See Projects</button>
       </div>
     </section>
 
