some bugs correction

--- a/index.html
+++ b/index.html
@@ -72,14 +72,18 @@
             DISCUSS DESIGN RULES
           </h2>
           <p>
-            Metasurfaces are generally designed by placing scatterers in
-            periodic or pseudo-periodic grids. We propose and discuss design
-            rules for functional metasurfaces with randomly placed.
+            At our core, we believe furniture should be more than just
+            functional — it should tell a story, bring comfort, and add
+            character to your space. We design and craft unique pieces that
+            combine timeless style with modern simplicity, using high-quality
+            materials and expert craftsmanship.
             <br /><br />
-            Anisotropic elements that randomly sample. Quisque sit amet nisl
-            ante. Fusce lacinia non tellus id gravida. Cras neque dolor,
-            volutpat et hendrerit et.
+            Whether you're furnishing a cozy home or a contemporary office, our
+            collection offers versatile and elegant options that reflect your
+            lifestyle. Let us help you create spaces that feel as beautiful as
+            they look.
           </p>
+
           <button class="btn-secondary">Learn More</button>
         </div>
         <div class="about-image">
